@@ -1,4 +1,4 @@
-<!-- Automagically generated by the ToDo program on 04/09/05, 12:15 -->
+<!-- Automagically generated by the ToDo program on 2005-04-11 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
