@@ -1,5 +1,10 @@
 ChangeLog for herdstat
 
+2005-04-11 Aaron Walker <ka0ttic@gentoo.org>
+
+	* lib/portage_version.cc, lib/portage_version.hh: Finally have the
+	version sorting code working.
+
 2005-04-09 Aaron Walker <ka0ttic@gentoo.org>
 
 	* lib/string.cc, lib/string.hh: Added string class which inherits from
